--- a/css/bh.css
+++ b/css/bh.css
@@ -8,7 +8,7 @@ body {
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #fff;
-    background-color: #000;
+    background-color: rgba(125,125,125,1);
 }
 
 h1, h2, h3 {
@@ -45,8 +45,8 @@ a {
     transition: all .2s ease-in-out;
 }
 
-a:hover, a:focus {
-    text-decoration: none;
+a:hover, a:1pxocus {
+    text-de0coration: none;
     /* color: #1d9b6c; */
     /* color: #0af */
     color: #666
@@ -56,9 +56,20 @@ a:hover, a:focus {
     font-weight: 400;
 }
 
+.nav-text:hover,
+.nav-text:focus {
+    color: rgba(75,75,75,1);
+    text-decoration: none;
+}
+
+.nav-container,
+.nav-container:hover,
+.nav-container:focus, {
+    text-decoration: none;
+}
 .navbar-custom {
-    margin-bottom: 0;
-    border-bottom: 1px solid rgba(255,255,255,.3);
+    margin-bottom: 2px;
+    border-bottom: 0px solid rgba(255,255,255,1);
     text-transform: default;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
     background-color: #000;
@@ -120,7 +131,7 @@ a:hover, a:focus {
 @media(min-width:768px) {
     .navbar-custom {
         padding: 20px 0;
-        border-bottom: 0;
+        border-bottom: 1;
         letter-spacing: 1px;
         background: 0 0;
         -webkit-transition: background .5s ease-in-out,padding .5s ease-in-out;
@@ -144,15 +155,15 @@ a:hover, a:focus {
     color: #fff;
     background: 
         linear-gradient(
-            rgba(0, 0, 0, 0.65), 
-            rgba(0, 0, 0, 0.65)
+            rgba(0, 0, 0, 0.0), 
+            rgba(0, 0, 0, 0.0)
         ),
-        url(../img/introbw.jpg) 
+        /* url(../img/introbw.jpg) */
         no-repeat
         bottom
         center
         scroll;
-    background-color: #000;
+    background-color: rgba(125,125,125,0.0);
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
@@ -320,9 +331,9 @@ a:hover, a:focus {
 
 .btn-default:hover,
 .btn-default:focus {
-    border: 3px solid #000;
+    border: 3px rgba(100,100,100,1);
     outline: 0;
-    color: #000;
+    color: rgba(100,100,100,1);
     background-color: #ffff;
 }
 
@@ -454,9 +465,9 @@ body {
 #introsquare {
     /* background:black;
     opacity: 0.6;*/
-    border: 2px solid black; 
+    border: 5px solid white; 
     display: block;
-    background: rgba(0, 0, 0, .5);
+    background: rgba(0, 0, 0, 0.0);
     padding-top: 10px;
     padding-bottom: 20px;
     padding-left: -50px;
