--- a/css/bh.css
+++ b/css/bh.css
@@ -31,6 +31,12 @@ p {
     display: inline-block;
     vertical-align: middle;
 }
+
+div-center{
+    text-align: center;
+    display: inline-block;
+    vertical-align: middle;   
+}
 .center {
     position: absolute; 
     top: 0; 
@@ -43,7 +49,6 @@ p {
     width: 100%;
     vertical-align: middle;
 }
-
 
 @media(min-width:768px) {
     p {
@@ -85,20 +90,20 @@ br {
     margin-bottom: 20px;
 }
 
-.nav-name {
-    margin-top: 50px;
-}
-
 .nav-text:hover,
 .nav-text:focus {
     color: rgba(75,75,75,1);
     text-decoration: none;
 }
 
+.nav-name {
+    margin-top: 15px;
+}
+
 .nav-container {
     text-decoration: none;
     margin-left: 20px;
-    margin-top: 60px;
+    margin-top: 15px;
 }
 
 .nav-container:hover,
@@ -509,5 +514,32 @@ body {
     padding-bottom: 20px;
     padding-left: -50px;
     padding-right: -50px;
+}
+
+@media screen and (max-width: 992px) { /* 768px) { */
+    .navbar-custom {
+        display: none !important;
+    }
+}
+
+@media screen and (max-width: 767px) { /* 768px) { */
+    .intro-more {
+        display: none !important;
+    }
+}
+
+@-webkit-keyframes fadeOut {
+    0% {
+        display: block;
+        opacity: 1;
+    }
+    1% {
+        display: block;
+        opacity: 0;
+    }
+    100% {
+        display: none;
+        opacity: 0;
+    }
 }
  
