--- a/css/bh.css
+++ b/css/bh.css
@@ -90,6 +90,8 @@ br {
     margin-bottom: 20px;
 }
 
+
+/* NAV */
 .nav-text:hover,
 .nav-text:focus {
     color: rgba(75,75,75,1);
@@ -189,6 +191,31 @@ br {
     }
 }
 
+/* SECTIONS */
+.content-section {
+    padding-top: 100px;
+    line-height: 1.9em;
+    margin-bottom: 1em
+}
+
+@media(min-width:767px) {
+    .content-section {
+        padding-top: 250px;
+    }
+}
+
+#introsquare {
+    /* background:black;
+    opacity: 0.6;*/
+    border: 5px solid white; 
+    display: block;
+    background: rgba(0, 0, 0, 0.0);
+    padding-top: 10px;
+    padding-bottom: 20px;
+    padding-left: -50px;
+    padding-right: -50px;
+}
+
 .intro {
     display: table;
     width: 100%;
@@ -240,86 +267,6 @@ br {
     }
 }
 
-.btn-circle {
-    width: 70px;
-    height: 70px;
-    margin-top: 15px;
-    padding: 7px 16px;
-    border: 2px solid #fff;
-    border-radius: 100%!important;
-    font-size: 40px;
-    color: #fff;
-    background: 0 0;
-    -webkit-transition: background .3s ease-in-out;
-    -moz-transition: background .3s ease-in-out;
-    transition: background .3s ease-in-out;
-}
-
-.btn-circle:hover,
-.btn-circle:focus {
-    outline: 0;
-    color: #fff;
-    background: rgba(255,255,255,.1);
-}
-
-.btn-circle i.animated {
-    -webkit-transition-property: -webkit-transform;
-    -webkit-transition-duration: 1s;
-    -moz-transition-property: -moz-transform;
-    -moz-transition-duration: 1s;
-}
-
-.btn-circle:hover i.animated {
-    -webkit-animation-name: pulse;
-    -moz-animation-name: pulse;
-    -webkit-animation-duration: 1.5s;
-    -moz-animation-duration: 1.5s;
-    -webkit-animation-iteration-count: infinite;
-    -moz-animation-iteration-count: infinite;
-    -webkit-animation-timing-function: linear;
-    -moz-animation-timing-function: linear;
-}
-
-@-webkit-keyframes pulse {    
-    0% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-
-    50% {
-        -webkit-transform: scale(1.2);
-        transform: scale(1.2);
-    }
-
-    100% {
-        -webkit-transform: scale(1);
-        transform: scale(1);
-    }
-}
-
-@-moz-keyframes pulse {    
-    0% {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
-
-    50% {
-        -moz-transform: scale(1.2);
-        transform: scale(1.2);
-    }
-
-    100% {
-        -moz-transform: scale(1);
-        transform: scale(1);
-    }
-}
-
-.content-section {
-    padding-top: 100px;
-    line-height: 1.9em;
-    margin-bottom: 1em
-}
-
 .projects-section {
     width: 100%;
     padding: 100px 0
@@ -332,27 +279,16 @@ br {
     -o-background-size: cover;
 }
 
-#map {
-    width: 100%;
-    height: 200px;
-    margin-top: 100px;
+
+footer {
+    padding: 50px 0;
 }
 
-@media(min-width:767px) {
-    .content-section {
-        padding-top: 250px;
-    }
-
-    .download-section {
-        padding: 100px 0;
-    }
-
-    #map {
-        height: 400px;
-        margin-top: 250px;
-    }
+footer p {
+    margin: 0;
 }
 
+/* BUTTONS */
 .btn {
     border-radius: 0;
     text-transform: default;
@@ -401,14 +337,98 @@ ul.banner-social-buttons {
     }
 }
 
-footer {
-    padding: 50px 0;
+.btn-circle {
+    width: 70px;
+    height: 70px;
+    margin-top: 15px;
+    padding: 7px 16px;
+    border: 2px solid #fff;
+    border-radius: 100%!important;
+    font-size: 40px;
+    color: #fff;
+    background: 0 0;
+    -webkit-transition: background .3s ease-in-out;
+    -moz-transition: background .3s ease-in-out;
+    transition: background .3s ease-in-out;
 }
 
-footer p {
-    margin: 0;
+.btn-circle:hover,
+.btn-circle:focus {
+    outline: 0;
+    color: #fff;
+    background: rgba(255,255,255,.1);
 }
 
+.btn-circle i.animated {
+    -webkit-transition-property: -webkit-transform;
+    -webkit-transition-duration: 1s;
+    -moz-transition-property: -moz-transform;
+    -moz-transition-duration: 1s;
+}
+
+.btn-circle:hover i.animated {
+    -webkit-animation-name: pulse;
+    -moz-animation-name: pulse;
+    -webkit-animation-duration: 1.5s;
+    -moz-animation-duration: 1.5s;
+    -webkit-animation-iteration-count: infinite;
+    -moz-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+    -moz-animation-timing-function: linear;
+}
+
+
+/* ANIMATIONS */
+@-webkit-keyframes pulse {    
+    0% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -webkit-transform: scale(1.2);
+        transform: scale(1.2);
+    }
+
+    100% {
+        -webkit-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@-moz-keyframes pulse {    
+    0% {
+        -moz-transform: scale(1);
+        transform: scale(1);
+    }
+
+    50% {
+        -moz-transform: scale(1.2);
+        transform: scale(1.2);
+    }
+
+    100% {
+        -moz-transform: scale(1);
+        transform: scale(1);
+    }
+}
+
+@-webkit-keyframes fadeOut {
+    0% {
+        display: block;
+        opacity: 1;
+    }
+    1% {
+        display: block;
+        opacity: 0;
+    }
+    100% {
+        display: none;
+        opacity: 0;
+    }
+}
+
+/* MISC */
 ::-moz-selection {
     text-shadow: none;
     background: #fcfcfc;
@@ -448,6 +468,7 @@ body {
     transform: translate(50%,50%);
 }
 
+/* Was going to use this for projects, wip */
 .portfolio-item {
     margin-bottom: 25px;
 }
@@ -504,18 +525,6 @@ body {
     margin-top: -5%;
 }
 
-#introsquare {
-    /* background:black;
-    opacity: 0.6;*/
-    border: 5px solid white; 
-    display: block;
-    background: rgba(0, 0, 0, 0.0);
-    padding-top: 10px;
-    padding-bottom: 20px;
-    padding-left: -50px;
-    padding-right: -50px;
-}
-
 @media screen and (max-width: 992px) { /* 768px) { */
     .navbar-custom {
         display: none !important;
@@ -528,18 +537,4 @@ body {
     }
 }
 
-@-webkit-keyframes fadeOut {
-    0% {
-        display: block;
-        opacity: 1;
-    }
-    1% {
-        display: block;
-        opacity: 0;
-    }
-    100% {
-        display: none;
-        opacity: 0;
-    }
-}
  
